test/testdata/classes/methods/class/access_from_instance_error.lox
class Foo {
  class bar() {}
}

Foo().bar(); // error: 'Foo' object has no property bar
